@@ -1,12 +1,15 @@
-MD5 1c94c7c8cd1c3fa4176586611a8fdb89 mod_mono-1.0.2.ebuild 1113
-MD5 298bdc28715ac2b1abd1b06eb155f50e mod_mono-1.0.4.ebuild 1325
-MD5 352e3da55d277dced7c1c7121be28d59 mod_mono-1.0.5.ebuild 1325
-MD5 c951f4c715a1a8aca3ae2b1c5623a6bd mod_mono-1.0.2-r1.ebuild 1321
-MD5 be353a66c51d3dca0a11b00c284d40c9 ChangeLog 2852
+MD5 ef0c77b1256e74cf1fb0cd9730af3d30 ChangeLog 3046
 MD5 505373f2589febccf63cfd0e072558d2 metadata.xml 179
-MD5 59e6cca34b5758dea676e2bd312a1bff files/digest-mod_mono-1.0.2-r1 66
+MD5 f3d1725d8a5959d9796d1ee0a1f25fbf mod_mono-1.0.2-r1.ebuild 1320
+MD5 a592e506b1abb139e4daa52508d8c195 mod_mono-1.0.2.ebuild 1112
+MD5 4a76a46b7909c06072a4cd143acb0d05 mod_mono-1.0.4.ebuild 1324
+MD5 0d789acc58aeae0af7a5aa2539424f97 mod_mono-1.0.5.ebuild 1324
+MD5 f344fff56afa3f2aae433ec2eb515135 mod_mono-1.0.5-r1.ebuild 1637
+MD5 be67d42abf306926f0fdd150c7291edc files/70_mod_mono.conf 617
 MD5 59e6cca34b5758dea676e2bd312a1bff files/digest-mod_mono-1.0.2 66
+MD5 59e6cca34b5758dea676e2bd312a1bff files/digest-mod_mono-1.0.2-r1 66
 MD5 77cda919ba03a77058f8ba4ddd144d67 files/digest-mod_mono-1.0.4 66
 MD5 c53ec7880bda0510f3d1aeccd179474f files/digest-mod_mono-1.0.5 66
 MD5 3c40535ec688be1562b0571ea0fe7da2 files/mod_mono-1.0.2-70_mod_mono.conf 614
-MD5 be67d42abf306926f0fdd150c7291edc files/70_mod_mono.conf 617
+MD5 e32606284f3105802f7912506e13e693 files/mod_mono-1.0.5-70_mod_mono.conf 620
+MD5 c53ec7880bda0510f3d1aeccd179474f files/digest-mod_mono-1.0.5-r1 66
