@@ -1,0 +1,25 @@
+<IfDefine MONO>
+  <IfModule !mod_mono.c>
+    LoadModule mono_module modules/mod_mono.so
+  </IfModule>
+
+  <IfModule mod_mime.c>
+    AddHandler mono .aspx .ashx .asmx .ascx .asax .config .ascx
+  </IfModule>
+
+  MonoUnixSocket /tmp/mod_mono_server
+  
+  # Uncomment this block to enable the xsp samples
+  #<IfModule mod_alias.c>
+  #  Alias /mono "/usr/share/doc/xsp/test"
+  #</IfModule>
+  #MonoApplications "/mono:/usr/share/doc/xsp/test"
+  #<Directory /usr/share/doc/xsp/test>
+  #  #SetHandler mono
+  #  <IfModule mod_access.c>
+  #      Order allow,deny
+  #      Allow from all
+  #  </IfModule>
+  #</Directory>
+</IfDefine>
+
