@@ -1,6 +1,12 @@
 # ChangeLog for www-apache/mod_mono
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_mono/ChangeLog,v 1.10 2004/12/13 20:02:51 latexer Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_mono/ChangeLog,v 1.11 2005/02/17 02:28:59 trapni Exp $
+
+*mod_mono-1.0.5-r1 (17 Feb 2005)
+
+  17 Feb 2005; Christian Parpart <trapni@gentoo.org>
+  +files/mod_mono-1.0.5-70_mod_mono.conf, +mod_mono-1.0.5-r1.ebuild:
+  adapted to new apache-module eclass
 
 *mod_mono-1.0.5 (13 Dec 2004)
 
